--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -998,44 +998,34 @@ filter {
   }
 
   # Filenames #########################################################################################################
-  # collect all filenames under the parent [zeek][filename] array
+  # collect all filenames under the parent [file][path] array
 
   if ([zeek_ecat_foe_info][filename])           { mutate { id => "mutate_merge_normalize_zeek_ecat_foe_info_filename"
-                                                           merge => { "[zeek][filename]" => "[zeek_ecat_foe_info][filename]" } } }
+                                                           merge => { "[file][path]" => "[zeek_ecat_foe_info][filename]" } } }
 
   if ([zeek_files][filename])                   { mutate { id => "mutate_merge_normalize_zeek_files_filename"
-                                                           merge => { "[zeek][filename]" => "[zeek_files][filename]" } } }
+                                                           merge => { "[file][path]" => "[zeek_files][filename]" } } }
 
   if ([zeek_files][extracted])                  { mutate { id => "mutate_merge_normalize_zeek_files_extracted"
-                                                           merge => { "[zeek][filename]" => "[zeek_files][extracted]" } } }
+                                                           merge => { "[file][path]" => "[zeek_files][extracted]" } } }
 
   if ([zeek_http][orig_filenames])              { mutate { id => "mutate_merge_normalize_zeek_http_orig_filenames"
-                                                           merge => { "[zeek][filename]" => "[zeek_http][orig_filenames]" } } }
+                                                           merge => { "[file][path]" => "[zeek_http][orig_filenames]" } } }
 
   if ([zeek_http][resp_filenames])              { mutate { id => "mutate_merge_normalize_zeek_http_resp_filenames"
-                                                           merge => { "[zeek][filename]" => "[zeek_http][resp_filenames]" } } }
+                                                           merge => { "[file][path]" => "[zeek_http][resp_filenames]" } } }
 
   if ([zeek_irc][dcc_file_name])                { mutate { id => "mutate_merge_normalize_zeek_irc_dcc_file_name"
-                                                           merge => { "[zeek][filename]" => "[zeek_irc][dcc_file_name]" } } }
+                                                           merge => { "[file][path]" => "[zeek_irc][dcc_file_name]" } } }
 
   if ([zeek_smb_files][name])                   { mutate { id => "mutate_merge_normalize_zeek_smb_files_name"
-                                                           merge => { "[zeek][filename]" => "[zeek_smb_files][name]" } } }
+                                                           merge => { "[file][path]" => "[zeek_smb_files][name]" } } }
 
   if ([zeek_smb_files][prev_name])              { mutate { id => "mutate_merge_normalize_zeek_smb_files_prev_name"
-                                                           merge => { "[zeek][filename]" => "[zeek_smb_files][prev_name]" } } }
+                                                           merge => { "[file][path]" => "[zeek_smb_files][prev_name]" } } }
 
   if ([zeek_tftp][fname])                       { mutate { id => "mutate_merge_normalize_zeek_tftp_fname"
-                                                           merge => { "[zeek][filename]" => "[zeek_tftp][fname]" } } }
-
-  if ([zeek][filename]) {
-    ruby {
-      id => "ruby_zeek_filename_uniq"
-      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
-      script_params => {
-        "field" => "[zeek][filename]"
-      }
-    }
-  }
+                                                           merge => { "[file][path]" => "[zeek_tftp][fname]" } } }
 
   # ECS - file.path from file.directory and file.name, if present and not already populated
   if ([file][directory]) and (![file][path]) {
@@ -1054,6 +1044,23 @@ filter {
     grok {
       id => "grok_zeek_files_fileext_ecs"
       match => { "[file][name]" => [ "%{GREEDYDATA}\.%{DATA:[file][extension]}" ] }
+    }
+  }
+
+  if ([file][path]) {
+    if (![file][directory]) and (![file][path]) {
+      # ECS - file.path -> file.file and file.name, if present and not already populated
+      grok {
+        id => "grok_zeek_files_filename_ecs"
+        match => { "[file][path]" => [ "%{GREEDYDATA:[file][directory]}[\\\/]%{DATA:[file][name]}" ] }
+      }
+    }
+    ruby {
+      id => "ruby_zeek_filename_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[file][path]"
+      }
     }
   }
 
