rename all "zeek_" fields to "zeek.", for idaholab/Malcolm#64. This is a big change and may break some stuff if i've missed it, but i've tried to be careful and will test everything.

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -37,10 +37,10 @@ filter {
           mutate { id => "mutate_add_tag_ics_best_guess_from_oui_src"
                    add_tag => [ "ics_best_guess" ] }
         }
-        if (![zeek_bestguess][category]) {
+        if (![zeek][bestguess][category]) {
           mutate {
             id => "mutate_add_fields_zeek_bestguess_category_from_ics_guess_oui_src"
-            add_field => { "[zeek_bestguess][category]" => "%{[@metadata][ics_guess_oui_src]}" }
+            add_field => { "[zeek][bestguess][category]" => "%{[@metadata][ics_guess_oui_src]}" }
           }
         }
         if (![source][oui]) {
@@ -100,10 +100,10 @@ filter {
           mutate { id => "mutate_add_tag_ics_best_guess_from_oui_dst"
                    add_tag => [ "ics_best_guess" ] }
         }
-        if (![zeek_bestguess][category]) {
+        if (![zeek][bestguess][category]) {
           mutate {
             id => "mutate_add_fields_zeek_bestguess_category_from_ics_guess_oui_dst"
-            add_field => { "[zeek_bestguess][category]" => "%{[@metadata][ics_guess_oui_dst]}" }
+            add_field => { "[zeek][bestguess][category]" => "%{[@metadata][ics_guess_oui_dst]}" }
           }
         }
         if (![destination][oui]) {
