--- a/logstash/pipelines/zeek/19_severity.conf
+++ b/logstash/pipelines/zeek/19_severity.conf
@@ -13,17 +13,17 @@ filter {
     # connection states of interest (see conn_states.yaml)
     # https://docs.zeek.org/en/current/scripts/base/protocols/conn/main.zeek.html#type-Conn::Info
     # https://docs.zeek.org/en/master/logs/conn.html
-    if ([zeek_conn][conn_state]) {
-      if ([zeek_conn][conn_state] == "S0") {
+    if ([zeek][conn][conn_state]) {
+      if ([zeek][conn][conn_state] == "S0") {
         mutate { id => "mutate_add_field_severity_item_conn_s0"
                  add_field => { "[event][severity_tags]" => "Connection attempt, no reply" } }
-      } else if ([zeek_conn][conn_state] == "REJ") {
+      } else if ([zeek][conn][conn_state] == "REJ") {
         mutate { id => "mutate_add_field_severity_item_conn_rej"
                  add_field => { "[event][severity_tags]" => "Connection attempt rejected" } }
-      } else if ([zeek_conn][conn_state] == "RSTO") {
+      } else if ([zeek][conn][conn_state] == "RSTO") {
         mutate { id => "mutate_add_field_severity_item_conn_rsto"
                  add_field => { "[event][severity_tags]" => "Connection aborted (originator)" } }
-      } else if ([zeek_conn][conn_state] == "RSTR") {
+      } else if ([zeek][conn][conn_state] == "RSTR") {
         mutate { id => "mutate_add_field_severity_item_conn_rstr"
                  add_field => { "[event][severity_tags]" => "Connection aborted (responder)" } }
       }
@@ -36,23 +36,23 @@ filter {
     }
 
     # assign severity to notice based on category
-    if ([zeek_notice]) {
-      if ([zeek_notice][category] == "ATTACK") {
+    if ([zeek][notice]) {
+      if ([zeek][notice][category] == "ATTACK") {
         mutate { id => "mutate_add_field_severity_notice_mitre_attack"
                  add_field => { "[event][severity_tags]" => "MITRE ATT&CK framework technique" } }
-      } else if ([zeek_notice][category] == "Scan") {
+      } else if ([zeek][notice][category] == "Scan") {
         mutate { id => "mutate_add_field_severity_notice_scan"
                  add_field => { "[event][severity_tags]" => "Notice (scan)" } }
-      } else if (([zeek_notice][category] == "FTP") or
-                 ([zeek_notice][category] == "HTTP") or
-                 ([zeek_notice][category] == "HTTPATTACKS") or
-                 ([zeek_notice][category] == "SSL")) {
+      } else if (([zeek][notice][category] == "FTP") or
+                 ([zeek][notice][category] == "HTTP") or
+                 ([zeek][notice][category] == "HTTPATTACKS") or
+                 ([zeek][notice][category] == "SSL")) {
         mutate { id => "mutate_add_field_severity_notice_protocol"
                  add_field => { "[event][severity_tags]" => "Notice (protocol)" } }
-      } else if (([zeek_notice][category] =~ /^CVE/) or
-                 ([zeek_notice][category] == "EternalSafety") or
-                 ([zeek_notice][category] == "Ripple20") or
-                 ([zeek_notice][category] == "Zerologon")) {
+      } else if (([zeek][notice][category] =~ /^CVE/) or
+                 ([zeek][notice][category] == "EternalSafety") or
+                 ([zeek][notice][category] == "Ripple20") or
+                 ([zeek][notice][category] == "Zerologon")) {
         mutate { id => "mutate_add_field_severity_notice_vuln"
                  add_field => { "[event][severity_tags]" => "Notice (vulnerability)" } }
       } else {
@@ -62,20 +62,20 @@ filter {
     }
 
     # weird logs get one score at the moment
-    if ([zeek_weird]) {
+    if ([zeek][weird]) {
       mutate { id => "mutate_add_field_severity_weird_other"
                add_field => { "[event][severity_tags]" => "Weird" } }
     }
 
     # assign score to signatures based on engine
-    if ([zeek_signatures]) {
-      if ('Capa' in [zeek_signatures][engine]) {
+    if ([zeek][signatures]) {
+      if ('Capa' in [zeek][signatures][engine]) {
         mutate { id => "mutate_add_field_severity_signatures_capa"
                  add_field => { "[event][severity_tags]" => "Signature (capa)" } }
-      } else if ('ClamAV' in [zeek_signatures][engine]) {
+      } else if ('ClamAV' in [zeek][signatures][engine]) {
         mutate { id => "mutate_add_field_severity_signatures_clamav"
                  add_field => { "[event][severity_tags]" => "Signature (ClamAV)" } }
-      } else if ('Yara' in [zeek_signatures][engine]) {
+      } else if ('Yara' in [zeek][signatures][engine]) {
         mutate { id => "mutate_add_field_severity_signatures_yara"
                  add_field => { "[event][severity_tags]" => "Signature (YARA)" } }
       } else {
