for idaholab/Malcolm#64, look up MAC addresses -> OUIs differently

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -11,23 +11,25 @@ filter {
 
     # source.mac/destination.mac are arrays at this point, as Arkime expects them to be
 
-    if ([source][mac]) and ([source][mac][0]) {
+    if ([source][mac]) {
 
       # attempt lookup of source.mac oui
-      ieee_oui {
-        id => "ieee_oui_srcMac"
-        source => "[source][mac][0]"
-        target => "[source][oui]"
-        ouifile => "/usr/share/logstash/config/oui-logstash.txt"
-        refresh_interval => 0
+      ruby {
+        id => "mac_lookup_src"
+        path => "/usr/share/logstash/malcolm-ruby/mac_lookup.rb"
+        script_params => {
+          "source" => "[source][mac]"
+          "map_path" => "/etc/vendor_macs.yaml"
+          "target" => "[source][oui]"
+        }
       }
 
       # also look up mac in ICS vendors list
       ruby {
         id => "ics_mac_lookup_src"
-        path => "/usr/share/logstash/malcolm-ruby/ics_mac_lookup.rb"
+        path => "/usr/share/logstash/malcolm-ruby/mac_lookup.rb"
         script_params => {
-          "source" => "[source][mac][0]"
+          "source" => "[source][mac]"
           "map_path" => "/etc/ics_macs.yaml"
           "target" => "[@metadata][ics_guess_oui_src]"
         }
@@ -53,11 +55,17 @@ filter {
 
       if ([source][oui]) {
 
-        # merge source.oui into srcOui array (with a count of 1)
+        # merge source.oui into srcOui array (with a count field)
         mutate { id => "mutate_merge_field_srcOui"
                  merge => { "[srcOui]" => "[source][oui]" } }
-        mutate { id => "mutate_add_field_srcOuiCnt"
-                 add_field => { "[srcOuiCnt]" => "1" } }
+        ruby {
+          id => "ruby_enrich_src_oui_cnt"
+          path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+          script_params => {
+            "source" => "[srcOui]"
+            "target" => "[srcOuiCnt]"
+          }
+        }
 
         # if this is a DHCP log type, copy srcOui to dhcp.oui
         if ([dhcp][mac]) {
@@ -74,23 +82,25 @@ filter {
 
     } # end if [source][mac]
 
-    if ([destination][mac]) and ([destination][mac][0]) {
+    if ([destination][mac]) {
 
       # attempt lookup of destination.mac oui
-      ieee_oui {
-        id => "ieee_oui_dstMac"
-        source => "[destination][mac][0]"
-        target => "[destination][oui]"
-        ouifile => "/usr/share/logstash/config/oui-logstash.txt"
-        refresh_interval => 0
+      ruby {
+        id => "mac_lookup_dst"
+        path => "/usr/share/logstash/malcolm-ruby/mac_lookup.rb"
+        script_params => {
+          "source" => "[destination][mac]"
+          "map_path" => "/etc/vendor_macs.yaml"
+          "target" => "[destination][oui]"
+        }
       }
 
       # also look up mac in ICS vendors list
       ruby {
         id => "ics_mac_lookup_dst"
-        path => "/usr/share/logstash/malcolm-ruby/ics_mac_lookup.rb"
+        path => "/usr/share/logstash/malcolm-ruby/mac_lookup.rb"
         script_params => {
-          "source" => "[destination][mac][0]"
+          "source" => "[destination][mac]"
           "map_path" => "/etc/ics_macs.yaml"
           "target" => "[@metadata][ics_guess_oui_dst]"
         }
@@ -119,8 +129,14 @@ filter {
         # merge destination.oui into dstOui array (with a count of 1)
         mutate { id => "mutate_merge_field_dstOui"
                  merge => { "[dstOui]" => "[destination][oui]" } }
-        mutate { id => "mutate_add_field_dstOuiCnt"
-                 add_field => { "[dstOuiCnt]" => "1" } }
+        ruby {
+          id => "ruby_enrich_dst_oui_cnt"
+          path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+          script_params => {
+            "source" => "[dstOui]"
+            "target" => "[dstOuiCnt]"
+          }
+        }
       }
 
     } # end if [destination][mac]
