--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3858,13 +3858,29 @@ filter {
   }
 
   if ([source][mac]) {
-    mutate { id => "mutate_add_field_zeek_srcMacCnt"
-             add_field => { "[source][mac-cnt]" => "1" } }
+    mutate { id => "mutate_split_zeek_source_mac"
+             split => { "[source][mac]" => "," } }
+    ruby {
+      id => "ruby_zeek_conn_src_mac_cnt"
+      path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+      script_params => {
+        "source" => "[source][mac]"
+        "target" => "[source][mac-cnt]"
+      }
+    }
   }
 
   if ([destination][mac]) {
-    mutate { id => "mutate_add_field_zeek_dstMacCnt"
-             add_field => { "[destination][mac-cnt]" => "1" } }
+    mutate { id => "mutate_split_zeek_destination_mac"
+             split => { "[destination][mac]" => "," } }
+    ruby {
+      id => "ruby_zeek_conn_dst_mac_cnt"
+      path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
+      script_params => {
+        "destination" => "[destination][mac]"
+        "target" => "[destination][mac-cnt]"
+      }
+    }
   }
 
   if ([zeek][uid]) {
