for idaholab/Malcolm#64, more ECS work

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -452,7 +452,7 @@ filter {
     translate {
       id => "translate_ssl_ja3s"
       field => "[tls][ja3s][0]"
-      destination => "[tls][server][ja3_description]"
+      destination => "[tls][server][ja3s_description]"
       dictionary_path => "/etc/ja3.yaml"
     }
   }
