--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2225,39 +2225,6 @@ filter {
     mutate { id => "mutate_add_tag_ics_modbus_read_write_multiple_registers_log"
              add_tag => [ "ics" ] }
 
-  } else if ([log_source] == "modbus_register_change") {
-    #############################################################################################################################
-    # modbus_register_change.log
-    # https://docs.zeek.org/en/stable/scripts/policy/protocols/modbus/track-memmap.zeek.html#type-Modbus::MemmapInfo
-
-    dissect {
-      id => "dissect_zeek_modbus_register_change"
-      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-      mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][register]}	%{[zeek_cols][old_val]}	%{[zeek_cols][new_val]}	%{[zeek_cols][delta]}"
-      }
-    }
-    if ("_dissectfailure" in [tags]) {
-      mutate {
-        id => "mutate_split_zeek_modbus_register_change"
-        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-        split => { "[message]" => "	" }
-      }
-      ruby {
-        id => "ruby_zip_zeek_modbus_register_change"
-        init => "$zeek_modbus_register_change_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'register', 'old_val', 'new_val', 'delta' ]"
-        code => "event.set('[zeek_cols]', $zeek_modbus_register_change_field_names.zip(event.get('[message]')).to_h)"
-      }
-    }
-
-    mutate {
-      id => "mutate_add_fields_zeek_modbus_register_change"
-      add_field =>  { "[zeek_cols][service]" => "modbus" }
-    }
-
-    mutate { id => "mutate_add_tag_ics_modbus_register_change_log"
-             add_tag => [ "ics" ] }
-
   } else if ([log_source] == "mqtt_connect") {
     #############################################################################################################################
     # mqtt_connect.log
@@ -4518,11 +4485,17 @@ filter {
     if ([zeek][http][orig_mime_types]) {
       mutate { id => "mutate_merge_zeek_http_orig_mime_types"
                merge => { "[http][bodyMagic]" => "[zeek][http][orig_mime_types]" } }
+      # ECS - zeek.http.orig_mime_types -> http.request.mime_type
+      mutate { id => "mutate_merge_ecs_http_request_mime_type"
+               merge => { "[http][request][mime_type]" => "[zeek][http][orig_mime_types]" } }
     }
 
     if ([zeek][http][resp_mime_types]) {
       mutate { id => "mutate_merge_zeek_http_resp_mime_types"
                merge => { "[http][bodyMagic]" => "[zeek][http][resp_mime_types]" } }
+      # ECS - zeek.http.resp_mime_types -> http.response.mime_type
+      mutate { id => "mutate_merge_ecs_http_response_mime_type"
+               merge => { "[http][response][mime_type]" => "[zeek][http][resp_mime_types]" } }
     }
 
     if ([http][bodyMagic]) {
@@ -4597,9 +4570,9 @@ filter {
     # ECS - zeek.http.response_body_len -> http.response.body.bytes
     if ([zeek][http][response_body_len]) {       mutate { id => "mutate_add_field_ecs_http_response_body_bytes"
                                                          add_field => { "[http][response][body][bytes]" => "%{[zeek][http][response_body_len]}" } } }
-    # ECS - zeek.http.status_code -> http.response.status_cocde
-    if ([zeek][http][status_code]) {             mutate { id => "mutate_add_field_ecs_http_response_status_cocde"
-                                                         add_field => { "[http][response][status_cocde]" => "%{[zeek][http][status_code]}" } } }
+    # ECS - zeek.http.status_code -> http.response.status_code
+    if ([zeek][http][status_code]) {             mutate { id => "mutate_add_field_ecs_http_response_status_code"
+                                                         add_field => { "[http][response][status_code]" => "%{[zeek][http][status_code]}" } } }
     # ECS - zeek.http.version -> http.version
     if ([zeek][http][version]) {                 mutate { id => "mutate_add_field_ecs_http_version"
                                                          add_field => { "[http][version]" => "%{[zeek][http][version]}" } } }
@@ -5195,9 +5168,9 @@ filter {
     # ECS - zeek.signatures.signature_id -> rule.name
     if ([zeek][signatures][signature_id]) { mutate { id => "mutate_add_field_ecs_rule_id_signature_name"
                                                     merge => { "[rule][name]" => "[zeek][signatures][signature_id]" } } }
-    # ECS - zeek.signatures.event_msg -> rule.description
-    if ([zeek][signatures][event_msg]) {    mutate { id => "mutate_add_field_ecs_rule_id_signature_event_msg"
-                                                    merge => { "[rule][description]" => "[zeek][signatures][event_msg]" } } }
+    # ECS - zeek.signatures.event_message -> rule.description
+    if ([zeek][signatures][event_message]) {    mutate { id => "mutate_add_field_ecs_rule_id_signature_event_message"
+                                                    merge => { "[rule][description]" => "[zeek][signatures][event_message]" } } }
 
   } else if ([log_source] == "sip") {
     #############################################################################################################################
@@ -5449,7 +5422,7 @@ filter {
       mutate { id => "mutate_merge_zeek_smtp_in_reply_to"
                merge => { "[email][id]" => "[zeek][smtp][in_reply_to]" } }
     }
-    if ([zeek][smtp][id]) {
+    if ([email][id]) {
       ruby {
         id => "ruby_zeek_smtp_idCnt"
         path => "/usr/share/logstash/malcolm-ruby/add_count_field.rb"
