--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -54,9 +54,6 @@ filter {
   if ([zeek][rdp][client_build])                 { mutate { id => "mutate_merge_normalize_zeek_rdp_client_build"
                                                            merge => { "[network][protocol_version]" => "[zeek][rdp][client_build]" } } }
 
-  if ([zeek][smtp][version])                      { mutate { id => "mutate_merge_normalize_zeek_smtp_version"
-                                                           merge => { "[network][protocol_version]" => "[zeek][smtp][version]" } } }
-
   if ([zeek][smb_cmd][version])                  { mutate { id => "mutate_merge_normalize_zeek_smb_cmd_version"
                                                            merge => { "[network][protocol_version]" => "[zeek][smb_cmd][version]" } } }
 
@@ -149,8 +146,8 @@ filter {
     }
   }
 
-  if ([zeek][dnp3_read_objects][function_code])  { mutate { id => "mutate_merge_normalize_zeek_dnp3_read_objects"
-                                                           merge => { "[event][action]" => "[zeek][dnp3_read_objects][function_code]" } } }
+  if ([zeek][dnp3_objects][function_code])  { mutate { id => "mutate_merge_normalize_zeek_dnp3_objects"
+                                                           merge => { "[event][action]" => "[zeek][dnp3_objects][function_code]" } } }
 
   if ([zeek][dns]) {
     # action: query class and type
@@ -359,9 +356,6 @@ filter {
 
   if ([zeek][smb_files][action])   { mutate { id => "mutate_merge_normalize_zeek_smb_files_action"
                                              merge => { "[event][action]" => "[zeek][smb_files][action]" } } }
-
-  if ([zeek][smtp][method])         { mutate { id => "mutate_merge_normalize_zeek_smtp_method"
-                                             merge => { "[event][action]" => "[zeek][smtp][method]" } } }
 
   if ([zeek][snmp]) {
     # action based on > 0 values for variou get/set PDUs
@@ -1104,8 +1098,6 @@ filter {
                                                         merge => { "[related][ip]" => "[zeek][dhcp][assigned_ip]" } } }
   if ([zeek][dhcp][requested_ip]) {             mutate { id => "mutate_merge_field_related_ip_zeek_dhcp_requested_ip"
                                                         merge => { "[related][ip]" => "[zeek][dhcp][requested_ip]" } } }
-  if ([zeek][enip_list_identity][device_ip]) {  mutate { id => "mutate_merge_field_related_ip_zeek_enip_list_identity_device_ip"
-                                                        merge => { "[related][ip]" => "[zeek][enip_list_identity][device_ip]" } } }
   if ([zeek][files][rx_hosts]) {                mutate { id => "mutate_merge_field_related_ip_zeek_files_rx_hosts"
                                                         merge => { "[related][ip]" => "[zeek][files][rx_hosts]" } } }
   if ([zeek][files][tx_hosts]) {                mutate { id => "mutate_merge_field_related_ip_zeek_files_tx_hosts"
