--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3159,7 +3159,7 @@ filter {
       id => "dissect_zeek_software"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][software_type]}	%{[zeek_cols][name]}	%{[zeek_cols][version_major]}	%{[zeek_cols][version_minor]}	%{[zeek_cols][version_minor2]}	%{[zeek_cols][version_minor3]}	%{[zeek_cols][version_addl]}	%{[zeek_cols][unparsed_version]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][software_type]}	%{[zeek_cols][name]}	%{[zeek_cols][version_major]}	%{[zeek_cols][version_minor]}	%{[zeek_cols][version_minor2]}	%{[zeek_cols][version_minor3]}	%{[zeek_cols][version_addl]}	%{[zeek_cols][unparsed_version]}	%{[zeek_cols][url]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -3170,7 +3170,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_software"
-        init => "$zeek_software_field_names = [ 'ts', 'orig_h', 'orig_p', 'software_type', 'name', 'version_major', 'version_minor', 'version_minor2', 'version_minor3', 'version_addl', 'unparsed_version' ]"
+        init => "$zeek_software_field_names = [ 'ts', 'orig_h', 'orig_p', 'software_type', 'name', 'version_major', 'version_minor', 'version_minor2', 'version_minor3', 'version_addl', 'unparsed_version', 'url' ]"
         code => "event.set('[zeek_cols]', $zeek_software_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -5440,6 +5440,14 @@ filter {
         match => { "[zeek][smtp][last_reply]" => [ "^%{SPACE}%{NUMBER:[zeek][smtp][last_reply_code]}" ] }
       }
     }
+
+  } else if ([log_source] == "software") {
+    #############################################################################################################################
+    # software.log specific logic
+    # ECS - zeek.software.url -> url.original/url.full
+    if ([zeek][software][url]) { mutate { id => "mutate_add_field_ecs_software_url"
+                                          add_field => { "[url][original]" => "%{[zeek][software][url]}"
+                                                         "[url][full]"     => "%{[zeek][software][url]}" } } }
 
   } else if ([log_source] == "ssh") {
     #############################################################################################################################
