for idaholab/Malcolm#64, testing ECS conversion

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -5598,14 +5598,8 @@ filter {
       }
     }
 
-    if ([zeek][ssl][ssl_version]) {
-      mutate { id => "mutate_merge_zeek_ssl_version"
-               merge => { "[tls][version]" => "[zeek][ssl][ssl_version]" } }
-      mutate { id => "mutate_add_field_ssl_versionCnt"
-               add_field => { "[tls][versionCnt]" => "1" } }
-    }
-
     if ([zeek][ssl][cipher]) {
+      # ECS - zeek.ssl.cipher -> tls.cipher
       mutate { id => "mutate_merge_zeek_ssl_cipher"
                merge => { "[tls][cipher]" => "[zeek][ssl][cipher]" } }
       mutate { id => "mutate_add_field_ssl_cipherCnt"
@@ -5648,34 +5642,9 @@ filter {
                merge => { "[zeek][x509][fingerprint]" => "[zeek][ssl][client_cert_chain_fps]" } }
     }
 
-  } else if ([log_source] == "tds_rpc") {
-    #############################################################################################################################
-    # tds_rpc.log specific logic
-
-    if ([zeek][tds_rpc][parameter]) {
-      ruby {
-        id => "ruby_zeek_tds_rpc_parse_parameter"
-        code => "
-          parameterHash = event.get('[zeek][tds_rpc][parameter]').split(',').each_with_object({}) do |a, hash|
-            key,value = a.split(/\s*=\s*/)
-            hash[key.delete_prefix('@')] = value
-          end
-          event.set('[zeek][tds_rpc][parameters]', parameterHash)"
-      }
-
-      mutate { id => "mutate_split_field_tds_rpc_parameter"
-               split => { "[zeek][tds_rpc][parameter]" => "," } }
-    }
-
-  } else if ([log_source] == "tls") {
-    #############################################################################################################################
-    # tls.log specific logic
-
     # ECS - zeek.ssl.ssl_version -> tls.version and tls.version_protocol
     if ([zeek][ssl][ssl_version]) {
       # turn TLSv10, TLSv13, TSLv12, etc. to 'tls' and '1.2', etc.
-      # TODO: tls.cipher already exists as a Arkime field, will this conflict/duplicate that?
-      # EDIT: it won't duplicate it, but it will replace it. I guess that's okay for now.
       ruby {
         id => "ruby_ecs_ssl_version_parse"
         code => "
@@ -5687,6 +5656,8 @@ filter {
           end
         "
       }
+      mutate { id => "mutate_add_field_ssl_versionCnt"
+               add_field => { "[tls][versionCnt]" => "1" } }
     }
 
     # ECS - zeek.ssl.established -> tls.established
@@ -5705,12 +5676,6 @@ filter {
                lowercase => [ "[tls][next_protocol]" ] }
     }
 
-    # ECS - zeek.ssl.cipher -> tls.cipher
-    # TODO: tls.cipher already exists as a Arkime field, will this conflict/duplicate that?
-    # EDIT: apparently it does duplicate the value, so I'm commenting this out for now...
-    #if ([zeek][ssl][cipher]) {               mutate { id => "mutate_add_field_ecs_zeek_tls_cipher"
-    #                                                 add_field => { "[tls][cipher]" => "%{[zeek][ssl][cipher]}" } } }
-
     # ECS - zeek.ssl.curve -> tls.curve
     if ([zeek][ssl][curve]) {                mutate { id => "mutate_add_field_ecs_zeek_tls_client_curve"
                                                      add_field => { "[tls][curve]" => "%{[zeek][ssl][curve]}" } } }
@@ -5727,12 +5692,12 @@ filter {
     if ([zeek][ssl][client_subject_full]) {  mutate { id => "mutate_add_field_ecs_zeek_tls_client_subject_full"
                                                      add_field => { "[tls][client][subject]" => "%{[zeek][ssl][client_subject_full]}" } } }
 
-    # ECS - zeek.ssl.server_name -> tls.client.server_name and destination.domain
+    # ECS - zeek.ssl.server_name -> tls.client.server_name and server.domain
     if ([zeek][ssl][server_name]) {
       mutate { id => "mutate_add_field_ecs_zeek_tls_client_server_name"
                add_field => { "[tls][client][server_name]" => "%{[zeek][ssl][server_name]}" } }
       mutate { id => "mutate_add_field_ecs_zeek_tls_client_server_name_destination_domain"
-               add_field => { "[destination][domain]" => "%{[zeek][ssl][server_name]}" } }
+               add_field => { "[server][domain]" => "%{[zeek][ssl][server_name]}" } }
     }
 
     # ECS - zeek.ssl.issuer_full -> tls.server.issuer
@@ -5746,6 +5711,25 @@ filter {
     # ECS - zeek.ssl.subject_full -> tls.server.subject
     if ([zeek][ssl][subject_full]) {         mutate { id => "mutate_add_field_ecs_zeek_tls_subject_full"
                                                      add_field => { "[tls][server][subject]" => "%{[zeek][ssl][subject_full]}" } } }
+
+  } else if ([log_source] == "tds_rpc") {
+    #############################################################################################################################
+    # tds_rpc.log specific logic
+
+    if ([zeek][tds_rpc][parameter]) {
+      ruby {
+        id => "ruby_zeek_tds_rpc_parse_parameter"
+        code => "
+          parameterHash = event.get('[zeek][tds_rpc][parameter]').split(',').each_with_object({}) do |a, hash|
+            key,value = a.split(/\s*=\s*/)
+            hash[key.delete_prefix('@')] = value
+          end
+          event.set('[zeek][tds_rpc][parameters]', parameterHash)"
+      }
+
+      mutate { id => "mutate_split_field_tds_rpc_parameter"
+               split => { "[zeek][tds_rpc][parameter]" => "," } }
+    }
 
   } else if ([log_source] == "weird") {
     #############################################################################################################################
