for idaholab/Malcolm#64, more ECS work

--- a/arkime/etc/wise.ini
+++ b/arkime/etc/wise.ini
@@ -7,5 +7,5 @@
 port=8081
 excludeDomains=*.bl.barracudabrts.com;*.zen.spamhaus.org;*.in-addr.arpa;*.avts.mcafee.com;*.avqs.mcafee.com;*.bl.barracuda.com;*.lbl8.mailshell.net;*.dnsbl.sorbs.net;*.s.sophosxl.net;*.metric.gstatic.com;*.ip6.arpa
 
-[zeek]
+[malcolm]
 key=enabled
