--- a/logstash/pipelines/output/99_elastic_output.conf
+++ b/logstash/pipelines/output/99_elastic_output.conf
@@ -4,6 +4,6 @@ output {
     hosts => "${ES_HOSTS:elasticsearch:9200}"
     manage_template => false
     index => "arkime_sessions3-%{+YYMMdd}"
-    document_id => "%{+YYMMdd}-%{zeekLogDocId}"
+    document_id => "%{+YYMMdd}-%{malcolmDocId}"
   }
 }
