--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3874,21 +3874,21 @@ filter {
                                split => { "[zeek][fuid]" => "," } } }
 
   if ([log_source] == "conn") {
-    mutate { id => "mutate_add_field_zeek_conn_zeekLogDocId"
-             add_field => { "[zeekLogDocId]" => "%{[zeek][uid]}" } }
+    mutate { id => "mutate_add_field_zeek_conn_malcolmDocId"
+             add_field => { "[malcolmDocId]" => "%{[zeek][uid]}" } }
 
   } else {
     if ([log][offset]) {
-      mutate { id => "mutate_add_field_zeek_not_conn_offset_zeekLogDocId"
-               add_field => { "[zeekLogDocId]" => "%{[zeek][uid]}-%{log_source}-%{[log][offset]}" } }
+      mutate { id => "mutate_add_field_zeek_not_conn_offset_malcolmDocId"
+               add_field => { "[malcolmDocId]" => "%{[zeek][uid]}-%{log_source}-%{[log][offset]}" } }
     } else {
       uuid {
         id => "uuid_zeek_random_not_conn"
         target    => "[@metadata][uuid]"
         overwrite => true
       }
-      mutate { id => "mutate_add_field_zeek_not_conn_zeekLogDocId"
-               add_field => { "[zeekLogDocId]" => "%{[zeek][uid]}-%{log_source}:%{[@metadata][uuid]}" } }
+      mutate { id => "mutate_add_field_zeek_not_conn_malcolmDocId"
+               add_field => { "[malcolmDocId]" => "%{[zeek][uid]}-%{log_source}:%{[@metadata][uuid]}" } }
     }
   } # if/else for defining logOffset field used in document ID for elasticsearch
 
