--- a/logstash/pipelines/external/99_elastic_output.conf
+++ b/logstash/pipelines/external/99_elastic_output.conf
@@ -8,6 +8,6 @@ output {
     password => "${ES_EXTERNAL_PASSWORD:}"
     manage_template => false
     index => "arkime_sessions3-%{+YYMMdd}"
-    document_id => "%{+YYMMdd}-%{zeekLogDocId}"
+    document_id => "%{+YYMMdd}-%{malcolmDocId}"
   }
 }
